# Dummydll

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  COPYING  Dummydll.sln  Dummydll.vcxproj  Dummydll.vcxproj.filters  Dummydllx86.7z  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dummy.pc.in  dummydll.cpp  dummydll.h  dummydll.sln
cmake/: DummyConfig.cmake.in
dummydll/: dummydll.h  dummydll.vcxproj
include/: dummydll.h
src/: dummydll.cpp
vcpkg port/: portfile.cmake  vcpkg.json
vcpkg port zip/: portfile.cmake  vcpkg.json
